; ModuleID = '/home/carl/AnghaBench/jemalloc/test/unit/extr_stats_print.c_parser_parse_object.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/unit/extr_stats_print.c_parser_parse_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@TOKEN_TYPE_LBRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Object should start with {\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*)* @parser_parse_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parser_parse_object(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @TOKEN_TYPE_LBRACE, align 4
  %9 = call i32 @assert_d_eq(i32 %7, i32 %8, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %11 = call i64 @parser_tokenize(%struct.TYPE_7__* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %24

14:                                               ; preds = %1
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  switch i32 %18, label %23 [
    i32 128, label %19
    i32 129, label %22
  ]

19:                                               ; preds = %14
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %21 = call i32 @parser_parse_pairs(%struct.TYPE_7__* %20)
  store i32 %21, i32* %2, align 4
  br label %24

22:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %24

23:                                               ; preds = %14
  store i32 1, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %22, %19, %13
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @assert_d_eq(i32, i32, i8*) #1

declare dso_local i64 @parser_tokenize(%struct.TYPE_7__*) #1

declare dso_local i32 @parser_parse_pairs(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
